# profile_match

./: .gitignore  README.md  app.py  cv_matching_prompt.py  cv_to_json.py  docker-compose.yml  employee_projects_to_pdf.py  json_to_pdf.py  openai_backend.py  past_project_analyzer.py  process_cv_matches.py  project_matcher.py  project_matching_prompt.py  pyproject.toml  run.py  start-app.sh
.devcontainer/: Dockerfile  devcontainer.json
CV_json/: Almir Imeri - Timeless Soft.json  Amer Alnajdawi  - Timeless Soft.json  Christian Tu - Timeless Soft.json  Mateo Pasho  - Timeless Soft.json  Mohammed Sawas - Timeless Soft.json  Nikita Semkin- Timeless Soft.json  Patrick Bellositz  - Timeless Soft.json  Roberto Cemeri - Timeless Soft.json  Sarah_Kaloshi - Timeless Soft.json  Shkëlqim Zahiti - Timeless Soft.json
employee_projects/: Amer_Alnajdawi.json  Christian_Tu.json  Mateo_Pasho.json  Mohammed_Sawas.json  Nikita_Semkin.json  Patrick_Bellositz.json
excel/: TimelessSoft_Mitarbeiter_Projektematrix.xlsx
